TinyMUX 2.4:  CHANGES
Last Update:  September 2006

Major changes that may affect performance and require softcode tweaks:
~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~~
 -- The units on the timeslice configuration option have changed from
    milliseconds to seconds.  But, seconds can be expressed as a
    fraction whereas milliseconds could only be expressed as an
    integer, so this change doesn't take any capability away.
 -- Control over WOD Realms, Memory-Based, and other build options
    have been pulled back into the ./configure script.  The README
    files refer to the new methods, and ./configure --help gives a list.
    Also, gmake is no longer necessary for *BSD flavors.
 -- The behavior of case() is closer to switch().  The patterns are now
    evaluated.  The #$ substitution is also made.


Feature Additions:
~~~~~~~~~~~~~~~~~
 -- Added support for multi-character delimiters across nearly all
    functions which accept input or output delimiters.  For example,
    'iter(1%r2%r3,itext(),%r,|)' produces '1|2|3'.
 -- Added 'reset_players' configuration option which resets the player
    connection record.
 -- Added 'user_attrib_per_hour' which limits the rate at which
    user-defined attribute names are created.
 -- Added 'mail_per_hour' which limits the rate at which @mail can be
    created.
 -- Add output delimiter to elements(), extract(), filter(),
    filterbool(), graball(), remove(), shuffle(), sortby(), and
    splice().
 -- Connection, disconnection, partial, and suspect emits now show the
    player's @moniker.
 -- Added lag_limit configuration option to control how long the
    server will service commands.  The execution of expensive commands
    is abbreviated, and the queue is drained, and the executor is
    @set HALTED.  lag_maximum continues to be the reporting threshold.
 -- On Win32, use higher-quality time from QueryPerformanceCounter()
    instead of GetSystemTimeAsFileTime().  As soon as the error from